--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,12 +1,4 @@
-!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express To-Do</title>
-</head>
-<body>
-    <h1>Todos</h1>
+<%- include('../partials/header') %>
     <ul>
       <% skills.forEach(function(t) { %>
         <li>
@@ -16,5 +8,8 @@
         </li>
       <% }); %>
     </ul>
-  </body>
-</html>
+   <%- include('../partials/footer') %>
+
+
+
+   
