--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>skills</title>
-  </head>
-  <body>
-    <h3><%= skill %></h3>
-    <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
-  </body>
-</html>
+<%- include('../partials/header') %> 
+    <h3><%= skills %></h3>
+    <h3>Complete: <%= skills.done ? 'Yes' : 'No' %></h3>
+    <%- include('../partials/footer') %> 
