--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -9,6 +9,6 @@
 </head>
 <body>
   <a href="/">Home</a>
-   | 
+   | <a href="/addskills">Add skills</a>
   <a href="/skills">All skills</a>
   <h1><%= title %></h1>
